# Manuals

AI-Agent/LLM/: OpenAI、Anthropic与OpenAI-Compatible区别与联系.md  llama.cpp 本地部署大模型完整指南.md  ollama 本地大模型部署指南.md
AI-Agent/skills/: skill的5种设计模式.md
C++/: C++学习笔记环境配置之QT.md  VSCode学习笔记5配置C++语言(QT).md
C++/QT/: QT中的编码.docx  QT的QString与QTByteArrary.docx  QT的QTextCodec 类.docx
C++/VC/: vs2022_run.bat  vs_dev_auto.bat
CMake/: CMake使用手册.md
GCC/: C++调试之gdb.doc  Windows下GUN C++支持(msys2+mingw+cygwin).docx
Git/: Git配置详解gitconfig.md  第一章 Git安装与使用手册.md  第三章 Git加速配置.md  第二章 Git配置详解gitconfig.md  第四章 GitHub Copilot反向代理 免费使用GPT-4o.md
Go/: Go版本管理工具g.md  Go语言学习笔记之mod命令手册.md  Go语言学习笔记之环境配置.md  Go语言学习笔记之调试工具delve介绍.doc
JS/nodejs/: nodejs 并发编程手册.md  nodejs 数据结构手册.md  nodejs 文件操作手册.md  nodejs 项目全流程：nmp使用详解.md
MySql/: NOT IN 与 NOT EXISTS 子查询的区别与性能对比.md  单列索引与复合索引的区别.md
OpenCode/: OpenCode Agent完全使用手册.md  OpenCode Agent配置与使用手册.md  OpenCode Command完全使用手册.md  OpenCode Mcp配置与使用详解.md  OpenCode Skill完全使用手册.md  OpenCode TUI、LLM等基础配置使用手册.md  OpenCode oh-my-openagent配置与使用手册.md  OpenCode 使用手册.md  OpenCode 安装与使用.md  OpenCode 安装与使用手册.md  OpenCode 插件配置与使用手册.md  OpenCode之Agent、Slash命令、Skill技能的关系与高级应用.md  OpenCode之Agent完全使用手册.md  OpenCode之Hooks完全使用手册.md  OpenCode之LLM配置与使用手册.md  OpenCode之Skill完全使用手册.md  OpenCode之plugin配置与使用手册.md  OpenCode之基础配置、TUI配置等使用手册.md  api.md  tmp.md
OpenSpec/: openspec 使用手册.md
Python/: README.md  python 函数与模块手册.md  python 包管理工具手册.md  python 基础语法手册.md  python 常见问题排查手册.md  python 并发编程手册.md  python 异常处理手册.md  python 数据结构手册.md  python 文件操作手册.md  python 环境配置手册.md  python 调试工具使用手册.md  python 面向对象编程手册.md  python 项目打包发布手册.md  python 高级特性手册.md  python项目全流程：pip+venv使用详解.md  python项目全流程：uv使用详解.md
VC/: VC各个版本运行库详解.md  vs2010_run.bat
VSCode/: VSCode学习笔记3配置C++语言(MINGW).md  VSCode学习笔记之安装与配置.md
VSCode/Demos/VSCode学习笔记5配置C++语言(QT)/CMakeDemo/: CMakeLists.txt
VSCode/Demos/VSCode学习笔记5配置C++语言(QT)/MSVCDemo/: CMakeLists.txt
WinDbg/: WinDbg选择32位或64位调试器.txt  Windbg学习笔记.docx  Windbg调试命令详解.docx
nodejs/: README.md  nodejs 函数与模块手册.md  nodejs 基础语法手册.md  nodejs 异常处理手册.md  nodejs 面向对象编程手册.md  nodejs 高级特性手册.md
tasks/python_manuals/: task_plan.md
(+1 files in other folders)
